<resources>
    <string name="app_name">DVR Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Visit Report</string>
    <string name="nav_header_subtitle">dailyvisitreport@groupsix.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_mycheckins">My CheckIns</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_logout">Logout</string>

    <string name="checkin_now">Checkin Now</string>
    <string name="expenses_n_bills">Expenses and Bills</string>
    <string name="todo_list">TODO List</string>
    <string name="performance">Performance</string>

    <string name="dashboard_page">Dashboard</string>
    <!--    <string name="performance">Performance</string>-->
    <!--    <string name="performance">Performance</string>-->
    <!--    <string name="performance">Performance</string>-->

    <string name="employee_id">Email</string>
    <string name="employee_password">Password</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>

    <string name="total_expenditure">Total Expenditure: </string>
    <string name="no_of_expenditure">Total Count: </string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_type">Customer Type</string>
    <string name="visit_purpose">Visit Purpose</string>
    <string name="visit_details">Visit Details</string>
    <string name="ping_for_location">Ping for location</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="rank">Rank</string>
    <string name="check_in">Check in</string>
    <string name="company_login">Company Login</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="don_t_have_an_account_register">Do not have an account? Register</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register_as_company">Register as Company</string>
    <string name="login_as_employee">Login as employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="logout1">Logout</string>
    <string name="todo1">TODO</string>
    <string name="customer_nameID">Cutomer Name</string>
    <string name="employee_name">Name</string>
    <string name="signedin">Keep SignedIn</string>
    <string name="remeber_in">Remember Me</string>
    <string name="employee_list">Employee List</string>
    <string name="emp_id">Emp ID</string>
    <string name="sr_no">Sr No.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
