<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_widgets_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_mycheckins"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_mycheckins" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_expenses" />
    </group>

    <item android:title="Accounts">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
