<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".CompanyDashboard">

    <Button
        android:id="@+id/addemployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_custom"
        android:textColor="@color/colorWhite"
        android:text="@string/add_employee"/>

    <TextView
        android:id="@+id/textemplist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/employee_list"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_below="@+id/addemployee"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/recyclersrno2"
        android:layout_width="wrap_content"
        android:layout_below="@+id/textemplist"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/ranking2"
            android:text="@string/sr_no"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/emp_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/emp_checkin2"
            android:textStyle="bold"
            android:text="Name"
            android:gravity="center_horizontal"
            android:layout_toRightOf="@+id/ranking2"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#ffff"
            />

        <TextView
            android:id="@+id/emp_checkin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:text="@string/emp_id"
            android:layout_marginTop="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:lines="1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#ffff"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyleremplist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recyclersrno2">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>