<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".AddEmployeeActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:background="@color/colorRed"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/view3"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/employeeemailregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#11000000"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textSize="22sp"
                android:hint="@string/email_id"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:drawableStart="@drawable/ic_action_name"
                android:autofillHints="" />

            <EditText
                android:id="@+id/employenameregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#11000000"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textSize="22sp"
                android:hint="@string/employee_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:drawableStart="@drawable/ic_action_name"
                android:autofillHints="" />

            <EditText
                android:id="@+id/employeepwdregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:background="#11000000"
                android:textSize="22sp"
                android:drawableStart="@drawable/ic_action_lock"
                android:ems="10"
                android:hint="@string/employee_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:autofillHints="" />
            <EditText
                android:id="@+id/employeeconfpwdregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:background="#11000000"
                android:textSize="22sp"
                android:drawableStart="@drawable/ic_action_lock"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:autofillHints="" />

            <Button
                android:id="@+id/buttonaddemployee"
                android:layout_width="match_parent"
                android:layout_margin="30dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:background="@drawable/button_custom"
                android:text="@string/add_employee"
                android:layout_marginTop="20dp"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:textColorHint="#00C03D3D"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>